--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    font-size: 1rem;
+    color: rgb(156, 59, 203);
 }
