--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,79 @@ body {
     padding: 0;
     font-family: sans-serif;
     font-size: 1rem;
-    color: rgb(55, 139, 40);
+    color: rgb(33, 37, 41);
 }
 
 a {
     text-decoration: none;
 }
 
+h1 {
+    font-size: 2.25rem;
+    font-weight: 200;
+    color: rgb(125, 125, 142);
+}
+
 #root {
     height: 100%;
+}
+
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: rgb(207, 215, 230);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: rgb(207, 215, 230);
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: rgb(207, 215, 230);
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: rgb(207, 215, 230);
+}
+
+.field__wrapper {
+    border: 1px solid rgb(207, 215, 230);
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.field__wrapper input {
+    border: 0;
+    outline: 0;
+    font-size: 1rem;
+    box-sizing: border-box;
+    padding: .6rem .6rem;
+    width: 100%;
+}
+
+.field__label {
+    text-transform: uppercase;
+    font-size: .875rem;
+    font-weight: 300;
+    color: rgb(139, 153, 173);
+    line-height: 2;
+}
+
+.form__subset {
+    margin: 1rem 0;
+}
+
+.form__subset--right {
+    text-align: right;
+    margin: 1rem 0;
+}
+
+.button {
+    outline: 0;
+    border: 0;
+    background-color: rgb(131, 198,231);
+    border: 1ps solid rgb(131, 198,231);
+    border-radius: 4px;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    text-align: center;
+    font-size: .9rem;
+    padding: .6rem 1rem;
+    cursor: pointer;
 }
