--- a/src/index.css
+++ b/src/index.css
@@ -1,89 +1,110 @@
-html {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-}
-
-body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    font-size: 1rem;
-    color: rgb(33, 37, 41);
-}
-
-a {
-    text-decoration: none;
-}
-
-h1 {
-    font-size: 2.25rem;
-    font-weight: 200;
-    color: rgb(125, 125, 142);
-}
-
-#root {
-    height: 100%;
+::-webkit-input-placeholder{
+    color:rgb(207, 215, 230);
 }
 
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: rgb(207, 215, 230);
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: rgb(207, 215, 230);
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: rgb(207, 215, 230);
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: rgb(207, 215, 230);
+:-ms-input-placeholder{
+    color:rgb(207, 215, 230);
 }
 
-.field__wrapper {
-    border: 1px solid rgb(207, 215, 230);
-    border-radius: 4px;
-    overflow: hidden;
+
+::placeholder{
+    color:rgb(207, 215, 230);
 }
 
-.field__wrapper input {
-    border: 0;
-    outline: 0;
-    font-size: 1rem;
-    box-sizing: border-box;
-    padding: .6rem .6rem;
-    width: 100%;
+
+.field__wrapper{
+        overflow:hidden;
+        border:1px solid rgb(207, 215, 230);
+        border-radius:4px;
+    }
+
+
+.field__wrapper input{
+            -webkit-box-sizing:border-box;
+                    box-sizing:border-box;
+            padding:9.6px 9.6px;
+            padding:.6rem .6rem;
+            width:100%;
+            outline:0;
+            border:0;
+            font-size:16px;
+            font-size:1rem;
+        }
+
+
+.field__label{
+        color:rgb(139, 153, 173);
+        text-transform:uppercase;
+        font-weight:300;
+        font-size:14px;
+        font-size:.875rem;
+        line-height:2;
+    }
+
+
+.form__subset{
+    margin:16px 0;
+    margin:1rem 0;
 }
 
-.field__label {
-    text-transform: uppercase;
-    font-size: .875rem;
-    font-weight: 300;
-    color: rgb(139, 153, 173);
-    line-height: 2;
+
+.form__subset--right{
+    margin:16px 0;
+    margin:1rem 0;
+    text-align:right;
 }
 
-.form__subset {
-    margin: 1rem 0;
+
+.button{
+    padding:9.6px 16px;
+    padding:.6rem 1rem;
+    outline:0;
+    border:1ps solid rgb(131, 198, 231);
+    border:0;
+    border-radius:4px;
+    background-color:rgb(131, 198, 231);
+    color:rgb(255, 255, 255);
+    text-align:center;
+    text-transform:uppercase;
+    font-size:14.4px;
+    font-size:.9rem;
+    cursor:pointer;
 }
 
-.form__subset--right {
-    text-align: right;
-    margin: 1rem 0;
+
+html{
+    width:100%;
+    height:100%;
+    font-size:100%;
 }
 
-.button {
-    outline: 0;
-    border: 0;
-    background-color: rgb(131, 198,231);
-    border: 1ps solid rgb(131, 198,231);
-    border-radius: 4px;
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    text-align: center;
-    font-size: .9rem;
-    padding: .6rem 1rem;
-    cursor: pointer;
+
+body{
+    margin:0;
+    padding:0;
+    width:100%;
+    height:100%;
+    color:rgb(33, 37, 41);
+    font-size:16px;
+    font-size:1rem;
+    font-family:sans-serif;
+}
+
+
+a{
+    text-decoration:none;
+}
+
+
+h1{
+    color:rgb(125, 125, 142);
+    font-weight:200;
+    font-size:36px;
+    font-size:2.25rem;
+}
+
+
+#root{
+    height:100%;
 }
