Update field css using nesting

--- a/src/styles/field.postcss
+++ b/src/styles/field.postcss
@@ -28,13 +28,20 @@
     }
 }
 
-.form__subset {
-    margin: 1rem 0;
-}
+.form {
+    &__subset {
+        margin: 1rem 0;
 
-.form__subset--right {
-    margin: 1rem 0;
-    text-align: right;
+        &--right {
+            margin: 1rem 0;
+            text-align: right;
+        }
+
+        &--center {
+            margin: 1rem 0;
+            text-align: center;
+        }
+    }
 }
 
 .button {
