--- a/src/components/NavigationBar/navigation-bar.pcss
+++ b/src/components/NavigationBar/navigation-bar.pcss
@@ -1,50 +1,52 @@
+@import '../../styles/vars.postcss';
+
 .navigation-bar {
     position: fixed;
     top: 0;
-    left: 0;
     right: 0;
-    line-height: 50px;
-    height: 50px;
-    box-sizing: border-box;
-    font-size: .8rem;
-    padding: 0 .5rem;
+    left: 0;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: flex-start;
     align-content: stretch;
     align-items: stretch;
-}
+    justify-content: flex-start;
+    box-sizing: border-box;
+    padding: 0 .5rem;
+    height: var(--navigation-bar-height);
+    font-size: .8rem;
+    line-height: var(--navigation-bar-height);
 
-._navigation-bar:before {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 1;
-    background-color: currentColor;
-}
+    &:before {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        background-color: var(--navigation-bar-background);
+        content: '';
+        opacity: 1;
+    }
 
-.navigation-bar__link {
-    margin: 0 .5rem;
-    text-transform: uppercase;
-}
+    &__link {
+        margin: 0 .5rem;
+        text-transform: uppercase;
+    }
 
-.navigation-bar__item {
-    order: 0;
-    flex: 0 1 auto;
-    align-self: auto;
-}
+    &__item {
+        flex: 0 1 auto;
+        align-self: auto;
+        order: 0;
 
-.navigation-bar__item--flex{
-    order: 0;
-    flex: 1 1 auto;
-    align-self: auto;
-}
+        &--flex{
+            flex: 1 1 auto;
+            align-self: auto;
+            order: 0;
+        }
+    }
 
-.navigation-bar__placeholder {
-    height: 50px;
+    &__placeholder {
+        height: var(--navigation-bar-height);
+    }
 }
