--- a/src/index.pcss
+++ b/src/index.pcss
@@ -1,4 +1,5 @@
 @import './styles/field.postcss';
+@import './styles/vars.postcss';
 
 html {
     width: 100%;
@@ -11,7 +12,7 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    color: rgb(33, 37, 41);
+    color: var(--text-color);
     font-size: 1rem;
     font-family: sans-serif;
 }
@@ -21,7 +22,7 @@ a {
 }
 
 h1 {
-    color: rgb(125, 125, 142);
+    color: var(--headline-color);
     font-weight: 200;
     font-size: 2.25rem;
 }
