--- a/src/styles/vars.postcss
+++ b/src/styles/vars.postcss
@@ -4,7 +4,8 @@
     --hint-color: rgb(207, 215, 230);
     --headline-color: rgb(125, 125, 142);
     --text-color: rgb(63, 63, 68);
-    
+    --signal-color: rgb(255, 134, 198);
+
     --navigation-bar-height: 50px;
     --navigation-bar-background: transparent;
 }
