Update Admin stylings

--- a/src/components/Admin/admin.pcss
+++ b/src/components/Admin/admin.pcss
@@ -1,10 +1,5 @@
-/*
- just some test
-*/
-.postcss {
-    border: 1px solid blue;
+@import '../../styles/vars.postcss';
 
-    &.rest {
-        padding: 10px;
-    }
+.admin-view {
+
 }
