Add Shadow Color to vars

--- a/src/styles/vars.postcss
+++ b/src/styles/vars.postcss
@@ -5,6 +5,7 @@
     --headline-color: rgb(125, 125, 142);
     --text-color: rgb(63, 63, 68);
     --signal-color: rgb(255, 134, 198);
+    --shadow-color: rgb(231, 235, 243);
 
     --navigation-bar-height: 50px;
     --navigation-bar-background: transparent;
