Import navigations styling

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -1,5 +1,7 @@
-@import './styles/field.postcss';
 @import './styles/vars.postcss';
+@import './styles/helpers.postcss';
+@import './styles/field.postcss';
+@import './styles/navigations.postcss';
 
 html {
     width: 100%;
