--- a/src/styles/navigations.postcss
+++ b/src/styles/navigations.postcss
@@ -7,12 +7,27 @@
     box-shadow: inset 0 -1px 0 var(--shadow-color);
 
     &__link {
+        position: relative;
         display: inline-block;
         margin-right: 4px;
         padding: 15px 10px 15px 10px;
         color: var(--label-color);
         font-weight: 300;
         font-size: 16px;
-        line-height: 19px;
+        line-height: 20px;
+
+        &.active {
+            color: var(--base-color);
+
+            &:after {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 1px;
+                background-color: var(--base-color);
+                content: '';
+            }
+        }
     }
 }
