--- a/src/index.pcss
+++ b/src/index.pcss
@@ -29,6 +29,18 @@ h1 {
     font-size: 2.25rem;
 }
 
+h2 {
+    color: var(--headline-color);
+    font-weight: 200;
+    font-size: 1.7rem;
+}
+
+h3 {
+    color: var(--headline-color);
+    font-weight: 200;
+    font-size: 1.5rem;
+}
+
 #root {
     height: 100%;
 }
