Add global css class for main app view

--- a/src/App.pcss
+++ b/src/App.pcss
@@ -10,4 +10,10 @@
     box-sizing: border-box;
     padding-top: var(--navigation-bar-height);
     height: 100%;
+
+    .app__view {
+        flex: 1 1 auto;
+        align-self: auto;
+        padding: 0 20px;
+    }
 }
