Fix spacing of navigation links

--- a/src/styles/navigations.postcss
+++ b/src/styles/navigations.postcss
@@ -9,12 +9,20 @@
     &__link {
         position: relative;
         display: inline-block;
-        margin-right: 4px;
+        margin: 0 4px;
         padding: 15px 10px 15px 10px;
         color: var(--label-color);
         font-weight: 300;
         font-size: 16px;
         line-height: 20px;
+
+        &:first-child {
+            margin: 0 4px 0 -10px;
+        }
+
+        &:last-child {
+            margin: 0 0 0 4px;
+        }
 
         &.active {
             color: var(--base-color);
