--- a/src/components/NavigationBar/navigation-bar.pcss
+++ b/src/components/NavigationBar/navigation-bar.pcss
@@ -12,7 +12,7 @@
     align-items: stretch;
     justify-content: flex-start;
     box-sizing: border-box;
-    padding: 0 .5rem;
+    padding: 0 10px;
     height: var(--navigation-bar-height);
     font-size: .8rem;
     line-height: var(--navigation-bar-height);
@@ -45,7 +45,7 @@
 
 
     &__link {
-        margin: 0 .5rem;
+        margin: 0 10px;
         color: var(--base-color);
         text-transform: uppercase;
         cursor: pointer;
