Implement basic column layout

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -2,6 +2,7 @@
 @import './styles/helpers.postcss';
 @import './styles/field.postcss';
 @import './styles/navigations.postcss';
+@import './styles/views.postcss';
 
 html {
     width: 100%;
