Add navigation-bar background

--- a/src/styles/vars.postcss
+++ b/src/styles/vars.postcss
@@ -8,5 +8,5 @@
     --shadow-color: rgb(231, 235, 243);
 
     --navigation-bar-height: 50px;
-    --navigation-bar-background: transparent;
+    --navigation-bar-background: rgb(255, 255, 255);
 }
