--- a/src/styles/field.postcss
+++ b/src/styles/field.postcss
@@ -52,12 +52,12 @@
     border: 1ps solid var(--base-color);
     border: 0;
     border-radius: 4px;
+    background-color: var(--base-color);
     color: rgb(255, 255, 255);
     text-align: center;
     text-transform: uppercase;
     font-size: .9rem;
-    cursor: pointer;epqrtwji
-    background-color: var(--base-color);
+    cursor: pointer;
 }
 
 .inputfile {
