Update Image position to center

--- a/src/components/Settings/profile-image.pcss
+++ b/src/components/Settings/profile-image.pcss
@@ -1,15 +1,23 @@
-.profile-image {
-    display: block;
-    overflow: hidden;
-    margin: 1.5rem 0;
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+.settings-profile {
 
-    img {
+    .column {
+        &:first-child {
+            text-align: center;
+        }
+    }
+    .profile-image {
+        display: inline-block;
+        overflow: hidden;
+        margin: 1.5rem 0;
         width: 160px;
         height: 160px;
-        border: 0;
+        border-radius: 50%;
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+
+        img {
+            width: 160px;
+            height: 160px;
+            border: 0;
+        }
     }
 }
